<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profiles"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_person_black_24dp" />

    <Button
        android:id="@+id/btn_confirmImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="25dp"
        android:text="Confirm Image"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
        android:textColor="#fff"/>


    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_confirmImage"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="fname"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fname"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="username"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="address"
        android:inputType="text"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/imageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:enabled="false"
        android:hint="Image Name"
        android:textSize="20sp"
        android:textColorHint="#000"
        />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/imageName"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="Item Description"
        android:inputType="text"
        android:textSize="20sp"
        android:textColorHint="#000"
        />

    <Button
        android:id="@+id/btn_addpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:enabled="false"
        android:text="Update Profile"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
        android:textColor="@color/colorPrimaryDark"/>


</RelativeLayout>