<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/postmatra"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="say somethings"
        android:inputType="text"
        android:textSize="20sp"
        android:textColorHint="#000"
        />
    <Button
        android:id="@+id/btn_addpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postmatra"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"

        android:text="Add post"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
       />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postkolagirecycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp">


    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>